# borgweb

./: .gitattributes  .gitignore  AUTHORS  Dockerfile  README.md  pixi.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-app.yml
borgweb/: app.py  borg.py  cache.py  config.py
borgweb/_tests/: __init__.py
borgweb/static/: bundle.js  style.css
borgweb/static/i18n/: fr-FR.json
borgweb/templates/: _layout.html  _nav.html  index.html
borgweb/tests/: test_simple_dummy.py
borgweb/views/: backup.py  backups.py  logs.py  repos.py
etc/: :  borg.service  borg.timer  borg_backup.sh  borg_cleaner.service  borg_cleaner.timer  borg_log_cleaner.sh  borgweb.service  config.cfg
js/: index.js  package.json
js/src/: util.js  viewer.js
