[metadata]
version = attr: borgweb.__init__.__version__
name = 'borgweb'
author = 'Vivien Chene, original work by The Borg Collective (see AUTHORS)'
author_email ='viv@vivc.org'
url = 'https://github.com/vche/borgweb'
description = 'Browser-based user interface for BorgBackup, inspired'
long_description = "WEB UI for borg backup tool"
license ='BSD'
platforms =
    'Linux'
    'MacOS X'
    'FreeBSD'
    'OpenBSD'
    'NetBSD'
classifiers =
    'Development Status :: 4 - Beta'
    'Intended Audience :: System Administrators'
    'License :: OSI Approved :: BSD License'
    'Operating System :: POSIX :: BSD :: FreeBSD'
    'Operating System :: POSIX :: BSD :: OpenBSD'
    'Operating System :: POSIX :: BSD :: NetBSD'
    'Operating System :: MacOS :: MacOS X'
    'Operating System :: POSIX :: Linux'
    'Programming Language :: Python'
    'Programming Language :: Python :: 3'
    'Programming Language :: Python :: 3.4'
    'Programming Language :: Python :: 3.5'
    'Programming Language :: Python :: 3.6'
    'Programming Language :: Python :: 3.7'
    'Programming Language :: Python :: 3.8'
    'Programming Language :: Python :: 3.9'
    'Topic :: System :: Archiving :: Backup'

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
install_requires =
    flask>=0.10

[options.package_data]
package_data =
    static/*.*
    static/bootstrap/*
    static/fonts/*
    static/i18n/*
    templates/*

    include_package_data=True,
[options.entry_points]
console_scripts =
    borgweb = borgweb.app:main

[flake8]
ignore = E123,E126,E127,E129,E203,E221,E226,E231,E241,E265,E301,E302,E303,E713,F401,F403,W291,W293,W391
max-line-length = 120
exclude = docs/conf.py,borgweb/_version.py
